dist/pbs/Service.pbs-s3-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pbs-s3-proxy.cmdcentral.xyz
  name: pbs-s3-proxy
  namespace: pbs
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8007
      targetPort: 8007
  selector:
    cdk8s.io/metadata.addr: pbs-s3-proxy-pbs-s3-proxy-deployment-c84d7023
  type: LoadBalancer
