dist/pbs/Ingress.pbs-s3-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: pbs-s3-proxy
  namespace: pbs
spec:
  rules:
    - host: pbs-s3-proxy.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: pbs-s3-proxy
                port:
                  number: 8007
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pbs-s3-proxy.cmdcentral.xyz
      secretName: pbs-s3-proxy-tls
